<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/bott_nav_home"
        android:title="@string/title_wasiat"
        android:icon="@drawable/ic_menu_home" />

    <item
        android:id="@+id/bott_nav_bookmark"
        android:title="@string/title_bookmark"
        android:icon="@drawable/ic_menu_bookmark" />

    <item
        android:id="@+id/bott_nav_history"
        android:title="@string/title_history"
        android:icon="@drawable/ic_menu_history" />

    <item
        android:id="@+id/bott_nav_about"
        android:title="@string/title_about"
        android:icon="@drawable/ic_menu_about" />

</menu>